--- a/_config.yml
+++ b/_config.yml
@@ -42,29 +42,29 @@ repository: 'mdlandini/sandbox' # change this to your repository name
 #---------------------
 
 # Title of your website
-title: "IDAH@IU"
+title: "Sandbox for Dairy Farm"
 
 # Subtitle of your website. Leave blank if you want to.
-subtitle: "An Archive of Our Community's Heirlooms"
+subtitle: "Small Dairy Farms in Indiana"
 
 # A longer description of your site (max 150 words). Helps search engines find you.
-description: "Community Archiving Site"
+description: "[INSERT LONG DESCRIPTION HERE]"
 
 # These credits show up in the includes/_footer.html
 # Main author of the website.
-author: "IDAH@IU"
-authorname : "Institute for Digital Arts and Humanities"
+author: "Dr. James Farmer, Ann Campbell, Matt Landini"
+authorname : "Indiana University"
 sitelogo: "site_logo.jpg"
 
 # What year did you start up this community project?
-sitedate : 2022
+sitedate : 2023
 
 # Other community social media. Leave blank if you don't have these.
-email : "idah [at] iu.edu"
-website : "https://idah.indiana.edu/"
-twitter : "IDAH_IU"
-github : "idahatiu"
-facebook : "idahatiu"
+email : 
+website : 
+twitter : 
+github : 
+facebook : 
 instagram : 
 
 # If you need to know how many people visit your site, go to https://analytics.google.com/
@@ -79,9 +79,9 @@ google_g4_analytics_id:
 # You can see these font choices in action at https://community-archive.kalanicraig.com/docs/
 # Uncomment the line for the font you like. Comment out all of the other lines.
 
-fontchoice: archivonarrow # A narrow sans-serif font for headlines and body text
+#fontchoice: archivonarrow # A narrow sans-serif font for headlines and body text
 #fontchoice: baloo # A clean sans-serif font with a playful rounded sans-serif accent
-#fontchoice: quattrocento # A modern sans-serif font with classic serif accents
+fontchoice: quattrocento # A modern sans-serif font with classic serif accents
 #fontchoice: raleway # An elegant sans-serif font with bold sans-serif accents
 #fontchoice: roboto # A clean sans-serif font with simple serif accents
 #fontchoice: slab # A funky slab font with clean sans-serif accents
@@ -91,8 +91,8 @@ fontchoice: archivonarrow # A narrow sans-serif font for headlines and body text
 # You can see these color choices in action at https://community-archive.kalanicraig.com/docs/
 # Uncomment the line for the color you like. Comment out all of the other lines.
 
-colorchoice: navy # Navy with bright teal and grey
-#colorchoice: leafgreen # Leafy green and medium brown
+#colorchoice: navy # Navy with bright teal and grey
+colorchoice: leafgreen # Leafy green and medium brown
 #colorchoice: tan # Tan and deep brown with flame-bright orange
 #colorchoice: teal # Bright teal with bright orange-yellow accents
 #colorchoice: marigold # Near-black with marigold yellow
@@ -113,19 +113,19 @@ collections:
     creator: true
     group: true
 # If your collection items need to be grouped by person, family or some other group, uncomment this collection
-#  groups:
-#    output: true
-#    permalink: /:collection/:path:output_ext
-#    name: true
-#    folder: true
-#    sort_by: folder
+  groups:
+    output: true
+    permalink: /:collection/:path:output_ext
+    name: true
+    folder: true
+    sort_by: folder
 # If you have oral histories that go with groups, uncomment this collection:
-#  oralhistories:
-#    output: true
-#    permalink: /:collection/:path:output_ext
-#    name: true
-#    folder: true
-#    sort_by: folder
+  oralhistories:
+    output: true
+    permalink: /:collection/:path:output_ext
+    name: true
+    folder: true
+    sort_by: folder
   authors:
     output: false
     name: true
