--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,21 @@
 # Site navigation links
 
-- title: Our Community
+- title: Why Local Dairy Farms?
   url: /
   excerpt:
   image:
 
-- title: Our Collection
-  url: /collection
+- title: Maps
+  url: /maps
   excerpt:
   image:
 
-- title: Our Stories
+- title: Their Stories
   url: /stories
+  excerpt:
+  image:
+
+- title: About This Project
+  url: /about
   excerpt:
   image:
